exports[`commuter rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "address": "123 Main St",
    "coordinate": Object {
      "lat": 12,
      "lon": 34,
    },
    "geocodeConfidence": -1,
    "name": "test-commuter",
  },
]
`;

exports[`commuter rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "address": "123 Main St",
  "coordinate": Object {
    "lat": 12,
    "lon": 34,
  },
  "geocodeConfidence": -1,
  "name": "test-commuter",
}
`;

exports[`commuter rest endpoint should update model 1`] = `
Object {
  "__v": 0,
  "address": "123 Main St",
  "coordinate": Object {
    "lat": 12,
    "lon": 34,
  },
  "geocodeConfidence": -1,
  "name": "updated name",
}
`;
